--- a/relitorin-web-client/package.json
+++ b/relitorin-web-client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "eslint-config-app": "^1.0.6",
+    "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "vite-plugin-eslint": "^1.8.1"
