--- a/relitorin-web-client/package.json
+++ b/relitorin-web-client/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "eslint-config-app": "^1.0.6",
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-router-hash-link": "^2.4.3",
@@ -21,7 +23,8 @@
     "react-spring": "^9.7.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
