--- a/relitorin-web-client/package.json
+++ b/relitorin-web-client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "emailjs-com": "^3.2.0",
     "eslint-config-app": "^1.0.6",
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hash-link": "^1.0.2",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
